# gecko

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  build_extlibs.sh  build_protobuf.sh  notes.md  readme.md  update.sh
archive/msgpack-dev/: CMakeLists.txt
archive/protobuf/: CMakeLists.txt
cpp/: CMakeLists.txt  build_extlibs.sh  build_protobuf.sh  readme.md
cpp/archive/: example-gtest.cpp  json.cmake  msgpack-adaptor-gtest.cpp  msgpack.cmake  opencv.cmake  threads.cmake  zmq.cmake
cpp/archive/archive-good-stuff/: core.hpp  db.hpp  helpers.hpp
cpp/archive/archive-src/: geckocpp.cpp
cpp/archive/capnp/: CMakeLists.txt
cpp/archive/msgpack-dev/: test.cpp
cpp/archive/pycore/: ex.py  mbeacon.py  pycore.py
cpp/archive/tools/: CMakeLists.txt
cpp/cmake/: gecko.cmake  geckoBuild.cmake  geckoConfig.cmake.in  git.cmake  msgpack.cmake  opencv.cmake  template.cmake  zmq.cmake
cpp/dev/args/: CMakeLists.txt
cpp/dev/boost/: hostname.cpp  port.cpp
cpp/dev/colors/: color-test.cpp
cpp/dev/core/: CMakeLists.txt
cpp/dev/cxxopts/: CMakeLists.txt  core-ex.cpp
cpp/dev/db/: CMakeLists.txt  db.cpp
cpp/dev/getopt/: CMakeLists.txt
cpp/dev/msgs/: msg-test.cpp
cpp/dev/multicast/: mbeacon.cpp
cpp/dev/multicast-3/: msocket.hpp
cpp/dev/multicast-ping/: CMakeLists.txt  mping.c  mping.h
cpp/dev/multicast-zmq/: recv.cpp
cpp/dev/multicast-zmq-2/: msock.hpp
cpp/dev/nlohmann-json/: main.cpp
cpp/dev/opencv/: CMakeLists.txt
cpp/dev/other/: CMakeLists.txt  gecko-test.cpp  node-2-test.cpp  node-5-test.cpp  node-test.cpp  proc-test.cpp  zmq-interrupt-test.cpp
cpp/dev/python/: ctypes-test.py
cpp/dev/spotify-json/: test-json.cpp
cpp/dev/state-machine/: sm.cpp
cpp/docs/: library-notes.md
cpp/examples/: CMakeLists.txt
cpp/examples/core/: pub.cpp  sub.cpp
cpp/examples/json/: pub.cpp
cpp/examples/msgpack/: CMakeLists.txt
cpp/examples/protobuf/: CMakeLists.txt
cpp/examples/simple/: sub.cpp
cpp/extlibs/gecko-msgpack/: readme.md
cpp/extlibs/marko/: CMakeLists.txt  readme.md
cpp/extlibs/protobuf/: CMakeLists.txt  gecko_pb.h  helper_pb.h  msgs.proto
cpp/gtests/: CMakeLists.txt  ascii-gtest.cpp  json-gtest.cpp
cpp/include/gecko/: defaults.hpp  event.hpp  gecko.hpp  version.hpp.in  zmq_rep_req.hpp  zmq_sub_pub.hpp
cpp/src/: db.cpp  geckocpp.cpp  helpers.cpp  network.cpp  node.cpp  ps.cpp  signals.cpp  time.cpp  transport.cpp  zmq_rep_req.cpp  zmq_sub_pub.cpp
cpp/src/gecko/: defaults.hpp  gecko.hpp  node.hpp  zmq_sub_pub.hpp
cpp/tools/: CMakeLists.txt
cpp/tools/bag/: gecko-bag.cpp
cpp/tools/core/: geckocore.cpp
cpp/tools/ping-test/: gecko-ping.cpp
cpp/tools/version/: host.cpp  version.cpp
dev/boost/: CMakeLists.txt  args.cpp  port.cpp  sys.cpp  sys2.cpp
dev/msgpack/: CMakeLists.txt  test.cpp  test.py
dev/msgs/: CMakeLists.txt  common-msg-test.cpp  msg-test.cpp
dev/multicast-2/: CMakeLists.txt  mcreceive.c
dev/spotify-json/: CMakeLists.txt
dev/state-machine/: CMakeLists.txt
dev/thread/: CMakeLists.txt  thread-test.cpp
example/core/: CMakeLists.txt  pub.cpp  sub.cpp
example/json/: CMakeLists.txt  pub.cpp  robot.json
example/opencv/: CMakeLists.txt  ocv.cpp  pub.cpp  pub2.cpp  sub.cpp
example/simple/: CMakeLists.txt  pub.cpp  pub2.cpp  sub.cpp
example/simple-2/: CMakeLists.txt  pub.cpp  sub.cpp
examples/: CMakeLists.txt  readme.md
examples/core/: pub.cpp
examples/opencv/: pub.cpp  sub.cpp
examples/simple/: pub.cpp
extlibs/gecko-msgpack/: CMakeLists.txt
extlibs/gecko-msgpack/dev/: CMakeLists.txt  bag-test.cpp
extlibs/gecko-msgpack/gtests/: CMakeLists.txt  msgpack-adaptor-gtest.cpp  msgpack-msgs-gtest.cpp
extlibs/marko/: CMakeLists.txt  readme.md  reply.cpp  request.cpp
extlibs/marko/lib/: ascii.cpp  bsocket.cpp  mcsocket.cpp  ssocket.cpp
msgpack/: CMakeLists.txt  common.hpp  msgpack_pub_sub.hpp  msgs.hpp  serialization.hpp  stamped.hpp
msgpack/tests/: msgpack-10-test.cpp  msgpack-5-test.cpp  msgpack-6-test.cpp  msgpack-7-test.cpp  msgpack-8-test.cpp  msgpack-9-test.cpp
python/: pyproject.toml  readme.md  setup.py
python/archive/: beacon.py  geckolauncher.py  helpers.py  logger.py  messages-old.py  msg_helpers.py  multicast.py  pycore.py
python/dev/cmdline-app/: test.py
python/dev/discover/: test2.py  test3.py
python/dev/logging/: log.txt  test.py  test2.py
python/dev/multicast/: mbeacon.py  mc.py  mcsocket.py
python/dev/services/: test.py
python/docs/: notes.md
python/examples/tcp/: tcp.py
python/examples/tcp2/: sub.py
python/pygecko/: __init__.py  file_storage.py  gecko_enums.py
python/pygecko/apps/: bag.py  core.py  launch-file-validator.py  launch.py  log.py
python/pygecko/bag/: bag.py
python/pygecko/core/: core.py
python/pygecko/fake/: fake_camera.py
python/pygecko/messages/: __init__.py  id.py  nav_msgs.py  protocols.py  sensor_msgs.py  std_msgs.py
python/pygecko/multiprocessing/: __init__.py  binder.py  connector.py  geckopy.py  logger.py  mc_core_socket.py  process.py  rate.py  sig.py  singleton.py
python/pygecko/network/: ip.py  mcsocket.py  transport.py
python/pygecko/pycore/: mbeacon.py  multicast.py  transport.py
python/pygecko/single/: msgs_pb2.py
python/pygecko/transport/: __init__.py  zmq_base.py  zmq_req_rep.py  zmq_sub_pub.py
python/tests/: otest_no_core.py  otest_old.py  test.py  test2.py  test_base.py  test_core.py  test_req_rply.py
tests/: CMakeLists.txt  color-test.cpp  color.sh  core-test.cpp  directory-test.cpp  gecko-2-test.cpp  gecko-test.cpp  ip-test.cpp  msgpack-2-test.cpp  msgpack-4-test.cpp  msgpack-5-test.cpp  msgpack-6-test.cpp  msgpack-8-test.cpp  msgpack-test.cpp  multicast-test.cpp  node-3-test.cpp  node-4-test.cpp  node-5-test.cpp  node-test.cpp  process-2-test.cpp  process-test.cpp  thread-test.cpp  time-test.cpp  zmq-test.cpp
tests/archive/: core-test.cpp  directory-test.cpp  gecko-2-test.cpp  multicast-test.cpp
tools/: CMakeLists.txt
tools/core/: geckocore.cpp
tools/echo/: echo.cpp  gecko-echo.cpp
tools/logserver/: gecko-logserver.cpp  logserver.cpp
tools/ping-test/: gecko-ping.cpp  recv.cpp  send.cpp
(+204 files in other folders)
