[tool.poetry]
name = "pygecko"
version = "1.4.2"
description = "Yet another python robotic distributed framework and set of tools"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/pygecko/"
repository = 'http://github.com/gecko-robotics/pygecko'
# documentation = "http://..."
keywords = ['framework', 'robotic', 'robot', 'ros', 'distributed']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

# [tool.poetry.scripts]
# servoAX12 = "pyservos.bin.servoAX12:main"

[tool.poetry.dependencies]
python = ">=3.8"
#the_collector = "*"
colorama = "*"
pyyaml = "*"
simplejson = "*"
pyzmq = "*"
psutil = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"

# [mypy-pi_servo_serial]
# ignore_missing_imports = True

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
